[package]
name = "skarndb"
version = "0.1.0"
authors = ["Jay Schmidek <jay@schmidek.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.8"
uuid = { version = "0.8", features = ["v4"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"